[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fix_lwjgl"
version = "1.3.0"
authors = [
  { name="CoolCat467" },
]
description = "Fix LWJGL (Light Weight Java Game Library) version used in Minecraft for ARM devices"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
keywords = ["minecraft", "raspberry-pi", "lwjgl", "lwjgl2", "lwjgl3", "wrapper-script"]
dependencies = [
    "aiohttp==3.9.1"
]

[project.urls]
"Homepage" = "https://github.com/CoolCat467/fix-lwjgl"
"Source" = "https://github.com/CoolCat467/fix-lwjgl"
"Bug Tracker" = "https://github.com/CoolCat467/fix-lwjgl/issues"

[project.scripts]
fix_lwjgl_wrapper = "fix_lwjgl:cli_run"

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
show_column_numbers = true
show_error_codes = true
show_traceback = true
strict = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.black]
line-length = 79
target-version = ['py38']

[tool.ruff.isort]
combine-as-imports = true

[tool.pycln]
all = true
disable_all_dunder_policy = true

[tool.ruff]
line-length = 79
fix = true

include = ["*.py", "*.pyi", "**/pyproject.toml"]
select = [
    "A",  # flake8-builtins
    "ASYNC",  # flake8-async
    "B",  # flake8-bugbear
    "E",  # Error
    "F",  # pyflakes
    "I",  # isort
    "RUF",  # Ruff-specific rules
    "S",  # flake8-bandit
    "UP",  # pyupgrade
    "W",  # Warning
    "YTT",  # flake8-2020
]
extend-ignore = [
    'E501',  # line-too-long
    "S101",  # use of assert for tests and type narrowing
]

[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = py311, mypy
    isolated_build = false

    [gh-actions]
    python =
        3.11: py311, pytest, mypy

    [testenv]
    setenv =
        PYTHONPATH = {toxinidir}

    [testenv:pytest]
    deps =
        pytest
        pytest-cov
    commands = pytest --basetemp={envtmpdir}

    [testenv:mypy]
    deps =
        mypy
    commands = mypy src
"""
